remove letter spacing from the stamp in the Arabic version
letter spacing not going well with Arabic letters.
for more info: https://rtlstyling.com/posts/rtl-styling#1.-letter-spacing

--- a/ar/index.html
+++ b/ar/index.html
@@ -41,6 +41,9 @@
       .myth__title::before {
         content: "خرافة #" counter(myth);
       }
+      .stamp{
+        letter-spacing: normal; /* letter spacing distort Arabic letters for more: https://rtlstyling.com/posts/rtl-styling#1.-letter-spacing */
+      }
     </style>
   </head>
   <body>
